# OOP_COURSE

./: CMakeLists.txt  main.cpp
include/: bw_matrix.h  matrix.h  rgb_matrix.h
src/: bw_matrix.cpp  matrix.cpp  rgb_matrix.cpp
